# compose_chatbot

./: .env  .gitignore  README.md  docker-compose.yml
TOG_chatbot/: .env  Dockerfile  README.md  pyproject.toml
TOG_chatbot/Notebook/: connect_postgres.ipynb  connect_qdrent.ipynb
TOG_chatbot/app/: main.py
TOG_chatbot/src/tog_chatbot/: __init__.py  llm.py  postgres_helper.py
pipelines/: README.md
pipelines/pipelines/: 00_repeater_example.py  01_groq_pipeline.py
